--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,26 +10,25 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout_Drinks"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:background="@color/colorTabLayout_Background"
+        app:tabSelectedTextColor="@color/colorTabLayout_SelectedTextColor"
+        app:tabTextAppearance="@style/TabLayoutTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Left" />
+            android:layout_height="wrap_content"/>
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Center" />
+            android:layout_height="wrap_content"/>
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Right" />
+            android:layout_height="wrap_content"/>
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
