--- a/app/src/main/res/layout/fragment_drinks_tea.xml
+++ b/app/src/main/res/layout/fragment_drinks_tea.xml
@@ -6,8 +6,8 @@
     tools:context=".DrinksTeaFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/DrinksType_Tea" />
 
 </FrameLayout>
