--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,7 @@
         <item name="android:textColor">#000000</item>
     </style>
     <dimen name="textSize20sp">20sp</dimen>
+    <dimen name="textSize25sp">25sp</dimen>
+    <dimen name="textSize30sp">30sp</dimen>
 
 </resources>
