--- a/app/src/main/res/layout/fragment_drinks_milktea.xml
+++ b/app/src/main/res/layout/fragment_drinks_milktea.xml
@@ -4,16 +4,144 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_FragmentBackground02"
     tools:context=".DrinksMilkTeaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/DrinksType_MilkTea"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/textView_Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:background="@color/color_TitleBackground"
+        android:text="@string/DrinksTitle_Name"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Commodity01_Name"
+        app:layout_constraintEnd_toStartOf="@+id/textView_Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:background="@color/color_TitleBackground"
+        android:text="@string/DrinksTitle_Price"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView_Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView_Name"
+        app:layout_constraintTop_toTopOf="@+id/textView_Name" />
+
+    <TextView
+        android:id="@+id/textView_Commodity01_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Price_BubbleMilkTea"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_Commodity01_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
+        app:layout_constraintStart_toStartOf="@+id/textView_Price"
+        app:layout_constraintTop_toTopOf="@+id/button_Commodity01_Name" />
+
+    <TextView
+        android:id="@+id/textView_Commodity02_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Price_CoconutMilkTea"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_Commodity02_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
+        app:layout_constraintStart_toStartOf="@+id/textView_Price"
+        app:layout_constraintTop_toTopOf="@+id/button_Commodity02_Name" />
+
+    <TextView
+        android:id="@+id/textView_Commodity03_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Price_GrassJellyMilkTea"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_Commodity03_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
+        app:layout_constraintStart_toStartOf="@+id/textView_Price"
+        app:layout_constraintTop_toTopOf="@+id/button_Commodity03_Name" />
+
+    <TextView
+        android:id="@+id/textView_Commodity04_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Price_KantenMilkTea"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_Commodity04_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
+        app:layout_constraintStart_toStartOf="@+id/textView_Price"
+        app:layout_constraintTop_toTopOf="@+id/button_Commodity04_Name" />
+
+    <TextView
+        android:id="@+id/textView_Commodity05_Price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Price_PuddingMilkTea"
+        android:textSize="@dimen/textSize25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_Commodity05_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
+        app:layout_constraintStart_toStartOf="@+id/textView_Price"
+        app:layout_constraintTop_toTopOf="@+id/button_Commodity05_Name" />
+
+    <Button
+        android:id="@+id/button_Commodity01_Name"
+        android:layout_width="@dimen/layout_width_130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/MilkTea_BubbleMilkTea"
+        android:textSize="@dimen/textSize20sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Commodity02_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Name"
+        app:layout_constraintStart_toStartOf="@+id/textView_Name"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Name" />
+
+    <Button
+        android:id="@+id/button_Commodity02_Name"
+        android:layout_width="@dimen/layout_width_130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/MilkTea_CoconutMilkTea"
+        android:textSize="@dimen/textSize20sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Commodity03_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Name"
+        app:layout_constraintStart_toStartOf="@+id/textView_Name"
+        app:layout_constraintTop_toBottomOf="@+id/button_Commodity01_Name" />
+
+    <Button
+        android:id="@+id/button_Commodity03_Name"
+        android:layout_width="@dimen/layout_width_130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/MilkTea_GrassJellyMilkTea"
+        android:textSize="@dimen/textSize20sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Commodity04_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Name"
+        app:layout_constraintStart_toStartOf="@+id/textView_Name"
+        app:layout_constraintTop_toBottomOf="@+id/button_Commodity02_Name" />
+
+    <Button
+        android:id="@+id/button_Commodity04_Name"
+        android:layout_width="@dimen/layout_width_130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/MilkTea_KantenMilkTea"
+        android:textSize="@dimen/textSize20sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Commodity05_Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Name"
+        app:layout_constraintStart_toStartOf="@+id/textView_Name"
+        app:layout_constraintTop_toBottomOf="@+id/button_Commodity03_Name" />
+
+    <Button
+        android:id="@+id/button_Commodity05_Name"
+        android:layout_width="@dimen/layout_width_130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/MilkTea_PuddingMilkTea"
+        android:textSize="@dimen/textSize20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView_Name"
+        app:layout_constraintStart_toStartOf="@+id/textView_Name"
+        app:layout_constraintTop_toBottomOf="@+id/button_Commodity04_Name" />
+
 
 </android.support.constraint.ConstraintLayout>
