--- a/app/src/main/res/layout/fragment_drinks_tea.xml
+++ b/app/src/main/res/layout/fragment_drinks_tea.xml
@@ -12,11 +12,12 @@
         android:id="@+id/textView_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="10dp"
         android:background="@color/color_TitleBackground"
         android:text="@string/DrinksTitle_Name"
         android:textSize="@dimen/textSize25sp"
         app:layout_constraintBottom_toTopOf="@+id/button_Commodity01_Name"
+        app:layout_constraintEnd_toStartOf="@+id/textView_Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,8 +25,7 @@
         android:id="@+id/textView_Price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="20dp"
         android:background="@color/color_TitleBackground"
         android:text="@string/DrinksTitle_Price"
         android:textSize="@dimen/textSize25sp"
@@ -102,7 +102,7 @@
 
     <Button
         android:id="@+id/button_Commodity01_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_CeylonBlackTea"
         android:textSize="@dimen/textSize20sp"
@@ -113,7 +113,7 @@
 
     <Button
         android:id="@+id/button_Commodity02_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_DarjeelingTea"
         android:textSize="@dimen/textSize20sp"
@@ -124,7 +124,7 @@
 
     <Button
         android:id="@+id/button_Commodity03_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_JasmineGreenTea"
         android:textSize="@dimen/textSize20sp"
@@ -135,7 +135,7 @@
 
     <Button
         android:id="@+id/button_Commodity04_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_OolongTea"
         android:textSize="@dimen/textSize20sp"
@@ -146,7 +146,7 @@
 
     <Button
         android:id="@+id/button_Commodity05_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_PuerhTea"
         android:textSize="@dimen/textSize20sp"
@@ -157,7 +157,7 @@
 
     <Button
         android:id="@+id/button_Commodity06_Name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/layout_width_130dp"
         android:layout_height="wrap_content"
         android:text="@string/Tea_ChrysanthemumTea"
         android:textSize="@dimen/textSize20sp"
